--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,15 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.google.com'
+        }
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.0'
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4"
+        classpath "com.github.dcendents:android-maven-gradle-plugin:2.1"
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -20,6 +25,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.google.com'
+        }
         
     }
 }
